--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,6 +21,7 @@
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
+<p>9/26 將github帳號填入Exsel表單，並簡單了解<span>Solvespace使用方式</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立 <a href="https://mde.tw/cad2024/content/Parts.html">Parts</a> 頁面中的零件</p>
 <p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
@@ -41,14 +42,7 @@
 <p style="padding-left: 30px;">......</p>
 <p>HW1 自評分數:</p>
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
-<h2>HW1_Exam</h2>
-<p>從<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a>中選出零件, 隨堂進行考試.</p>
-<p>零件考試題目以 Solvespace 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p>零件考試題目以 NX2312 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
+<p></p>
 <h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
