--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -17,7 +17,8 @@
 <p><a class="Link--inTextBlock" href="https://mdecad2024.github.io/hw-otakuyoyo/"></a>個人網站:<a class="Link--inTextBlock" href="https://mdecad2024.github.io/hw-otakuyoyo/">https://mdecad2024.github.io/hw-otakuyoyo/</a></p>
 <p>其他資訊</p>
 <h1>Attendance</h1>
-<p>出席 (10%) - 自行舉證評分</p>
+<h2>W1</h2>
+<p><span>使用github提供的</span><span>Codespaces，維護個人的倉儲網站，在本週課程結束前，有提到需將本週影片：利用 Codespaces 維護個人的作業網站，創建個人帳戶並維護。</span></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
