移動網站位置

--- a/content/W2.html
+++ b/content/W2.html
@@ -142,7 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W2</h1>
-<p><span></span></p>
+<p><span>以下影片為複習Codespaces來維護個人網站:</span></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <br />W1 << <a href='W1.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
