--- a/config/content.htm
+++ b/config/content.htm
@@ -20,12 +20,13 @@
 <h2>W1</h2>
 <p><span>使用github提供的</span><span>Codespaces，維護個人的倉儲網站，在本週課程結束前，有提到需將本週影片：利用 Codespaces 維護個人的作業網站，創建個人帳戶並維護。</span></p>
 <h2><span>W2</span></h2>
-<p><span></span></p>
+<p><span>以下影片為複習Codespaces來維護個人網站:</span></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p>9/26 將github帳號填入Exsel表單，並簡單了解<span>Solvespace使用方式</span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立 <a href="https://mde.tw/cad2024/content/Parts.html">Parts</a> 頁面中的零件</p>
 <p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
 <hr/>
