--- a/config/content.htm
+++ b/config/content.htm
@@ -26,6 +26,9 @@
 <h2>W6</h2>
 <p></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
+<h1><span>HW1_Exam</span></h1>
+<h2><span>W10</span></h2>
+<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p>9/26 將github帳號填入Exsel表單，並簡單了解<span>Solvespace使用方式</span></p>
