--- a/content/HW1_Exam.html
+++ b/content/HW1_Exam.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W6.html'>W6</a></li></ul><li class='has-children'><a href='HW1_Exam.html'>HW1_Exam</a><ul class='dropdown'><li><a href='W10.html'>W10</a></li></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W6.html'>W6</a><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>HW1_Exam</h1>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
+    <div id="tipue_search_content">w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>HW1_Exam</h1>
+<p><br/><span>w</span><span>10</span></p>
+<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
+<br />w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
