--- a/content/w11_hw.html
+++ b/content/w11_hw.html
@@ -141,15 +141,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW2 << <a href='HW2.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>HW2_Exam</h1>
-<p>與 HW2 內容相近的組立件題目, 隨堂進行考試.</p>
-<p>零件與組立件考試題目以 Solvespace 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件與組立件檔案下載</p>
-<p>零件與組立件考試題目以 NX 繪圖操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的零件與組立件檔案下載</p>
-<br />HW2 << <a href='HW2.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w12_ch.html'>Next</a> >> w12_ch<br /><h1>w11_hw</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pMLyWLySgyE?si=siUhbi8sFQ7Ggepf" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RbsG0DDPYsk?si=VMHXRZ5mRmBl2odv" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/mw0eESL8t6k?si=eLDTd4_N-G5KqKah" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='w12_ch.html'>Next</a> >> w12_ch</div>
         
     <!-- footer -->
       <div class="container">
