--- a/config/content.htm
+++ b/config/content.htm
@@ -22,6 +22,16 @@
 <h2><span>W2</span></h2>
 <p><span>以下影片為複習Codespaces來維護個人網站:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
+<p>1.首先進入codespaces</p>
+<p>2.建立一個新的終端機</p>
+<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
+<p><span>4.在終端機複製上面的程式代碼</span></p>
+<p>  執行動態-----python3 main.py</p>
+<p>  執行靜態-----python3 main2.py</p>
+<p>5.推上到靜態網頁上</p>
+<p>    git add .</p>
+<p>    git commit -m"新增要推上去的簡介"</p>
+<p>    git push</p>
 <h2>W6</h2>
 <p></p>
 <h2>w11_hw</h2>
