--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,9 +21,16 @@
 <p><span>使用github提供的</span><span>Codespaces，維護個人的倉儲網站，在本週課程結束前，有提到需將本週影片：利用 Codespaces 維護個人的作業網站，創建個人帳戶並維護。</span></p>
 <h2><span>W2</span></h2>
 <p><span>以下影片為複習Codespaces來維護個人網站:</span></p>
-<p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <h2>W6</h2>
+<p></p>
+<h2>w11_hw</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pMLyWLySgyE?si=siUhbi8sFQ7Ggepf" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RbsG0DDPYsk?si=VMHXRZ5mRmBl2odv" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/mw0eESL8t6k?si=eLDTd4_N-G5KqKah" title="YouTube video player" width="560"></iframe></p>
+<p></p>
 <h2>w12_ch</h2>
 <p></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
