新增週記內容

--- a/content/w3.html
+++ b/content/w3.html
@@ -141,9 +141,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Attendance << <a href='Attendance.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p><span>使用github提供的</span><span>Codespaces，維護個人的倉儲網站，在本週課程結束前，有提到需將本週影片：利用 Codespaces 維護個人的作業網站，創建個人帳戶並維護。</span></p>
-<br />Attendance << <a href='Attendance.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>w3</h1>
+<p>1.填寫github帳號到excel上</p>
+<p>2.教solvespace畫圖</p>
+<p>3.分析solvespaces的功用和職場發展:</p>
+<p><span>SolveSpace 是一款開源的參數化3D CAD建模軟體，主要用於製作2D和3D的技術設計、工程建模及機械設計</span><span>SolveSpace 在業界的應用更多聚焦於 <strong>輕量化、快速設計、教育用途和製造準備</strong>。對於需要高端功能的大型企業， 可能不夠用，但對於初創團隊、個人設計師或教育領域來說，它是一個靈活且經濟實惠的解決方案。</span></p>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
