--- a/content/W2.html
+++ b/content/W2.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W6.html'>W6</a><li><a href='w11_hw.html'>w11_hw</a><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='W6.html'>W6</a><li><a href='w11_hw.html'>w11_hw</a><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W2</h1>
+    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>W2</h1>
 <p><span>以下影片為複習Codespaces來維護個人網站:</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/8ztcex3L0ag?si=lhJ-EiY8k0TE4CAo" title="YouTube video player" width="560"></iframe></p>
 <p>1.首先進入codespaces</p>
@@ -154,7 +154,7 @@ img.add_border {
 <p>    git add .</p>
 <p>    git commit -m"新增要推上去的簡介"</p>
 <p>    git push</p>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<br />W1 << <a href='W1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
