--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,6 +32,11 @@
 <p>    git add .</p>
 <p>    git commit -m"新增要推上去的簡介"</p>
 <p>    git push</p>
+<h2>w3</h2>
+<p>1.填寫github帳號到excel上</p>
+<p>2.教solvespace畫圖</p>
+<p>3.分析solvespaces的功用和職場發展:</p>
+<p><span>SolveSpace 是一款開源的參數化3D CAD建模軟體，主要用於製作2D和3D的技術設計、工程建模及機械設計</span><span>SolveSpace 在業界的應用更多聚焦於 <strong>輕量化、快速設計、教育用途和製造準備</strong>。對於需要高端功能的大型企業， 可能不夠用，但對於初創團隊、個人設計師或教育領域來說，它是一個靈活且經濟實惠的解決方案。</span></p>
 <h2>W6</h2>
 <p></p>
 <h2>w11_hw</h2>
@@ -40,6 +45,7 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RbsG0DDPYsk?si=VMHXRZ5mRmBl2odv" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/mw0eESL8t6k?si=eLDTd4_N-G5KqKah" title="YouTube video player" width="560"></iframe></p>
+<h3>w11_hw.stl</h3>
 <p></p>
 <h2>w12_ch</h2>
 <p></p>
