--- a/content/w11_hw.stl.html
+++ b/content/w11_hw.stl.html
@@ -231,7 +231,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><br />w11_hw << <a href='w11_hw.html'>Previous</a> <a href='w12_ch.html'>Next</a> >> w12_ch</div>
+</script>
+<br />w11_hw << <a href='w11_hw.html'>Previous</a> <a href='w12_ch.html'>Next</a> >> w12_ch</div>
         
     <!-- footer -->
       <div class="container">
