--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -49,7 +49,7 @@
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_04.stl">模型2</a> <!-- 第二題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_04.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_05.stl">模型3</a> <!-- 第三題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
