--- a/content/w7.html
+++ b/content/w7.html
@@ -141,12 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW4 << <a href='HW4.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>HW4_Exam</h1>
-<p>與 HW4 內容相近的模擬場景題目, 隨堂進行考試.</p>
-<p>建立模擬場景操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的模擬場景與控制程式檔案下載</p>
-<br />HW4 << <a href='HW4.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
+    <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
         
     <!-- footer -->
       <div class="container">
