--- a/content/w7.stl.html
+++ b/content/w7.stl.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,12 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW4 << <a href='HW4.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>HW4_Exam</h1>
-<p>與 HW4 內容相近的模擬場景題目, 隨堂進行考試.</p>
-<p>建立模擬場景操作過程影片如下:</p>
-<p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
-<p style="padding-left: 30px;">所完成的模擬場景與控制程式檔案下載</p>
-<br />HW4 << <a href='HW4.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw<br /><h1>w7.stl</h1>
+<p></p>
+<br />w7 << <a href='w7.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
         
     <!-- footer -->
       <div class="container">
