--- a/config/content.htm
+++ b/config/content.htm
@@ -47,6 +47,7 @@
 <p></p>
 <h2>w11_hw</h2>
 <p>其他組員作業連結<a href="https://mdecad2024.github.io/hw-Spirit0224/content/w11_hw.html">41223122</a>  <a href="https://mdecad2024.github.io/hw-joeisme1208/content/w11_hw.html">41223130</a></p>
+<p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w11_hw.stl.html">零件檔</a>點這裡</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pMLyWLySgyE?si=siUhbi8sFQ7Ggepf" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RbsG0DDPYsk?si=VMHXRZ5mRmBl2odv" title="YouTube video player" width="560"></iframe></p>
