--- a/config/content.htm
+++ b/config/content.htm
@@ -37,8 +37,15 @@
 <p>2.教solvespace畫圖</p>
 <p>3.分析solvespaces的功用和職場發展:</p>
 <p><span>SolveSpace 是一款開源的參數化3D CAD建模軟體，主要用於製作2D和3D的技術設計、工程建模及機械設計</span><span>SolveSpace 在業界的應用更多聚焦於 <strong>輕量化、快速設計、教育用途和製造準備</strong>。對於需要高端功能的大型企業， 可能不夠用，但對於初創團隊、個人設計師或教育領域來說，它是一個靈活且經濟實惠的解決方案。</span></p>
-<h2>W6</h2>
-<p></p>
+<h2>w7</h2>
+<p>1.利用solvespaces畫圖完成後</p>
+<p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
+<p>3.存到公用下載中，並且改檔名XXX.stl</p>
+<p>4.存完後，開啟cmd檔案</p>
+<p>5.輸入如下</p>
+<p><img alt="" height="169" src="/images/messageImage_1732971993998.jpg" width="323"/></p>
+<p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
+<p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
 <h1>w7</h1>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
