--- a/config/content.htm
+++ b/config/content.htm
@@ -39,9 +39,10 @@
 <p><span>SolveSpace 是一款開源的參數化3D CAD建模軟體，主要用於製作2D和3D的技術設計、工程建模及機械設計</span><span>SolveSpace 在業界的應用更多聚焦於 <strong>輕量化、快速設計、教育用途和製造準備</strong>。對於需要高端功能的大型企業， 可能不夠用，但對於初創團隊、個人設計師或教育領域來說，它是一個靈活且經濟實惠的解決方案。</span></p>
 <p></p>
 <h2>w7</h2>
-<p></p>
+<p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w7.stl.html">零件檔</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
 <p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名XXX.stl</p>
