上傳W7作業與作業影片

--- a/content/w7.html
+++ b/content/w7.html
@@ -144,14 +144,14 @@ img.add_border {
     <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7</h1>
 <p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w7.stl.html">零件檔</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
-<p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BlixSNVUfwk?si=aqVsdQrgZY4Vylnz" title="YouTube video player" width="560"></iframe></p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名XXX.stl</p>
 <p>4.存完後，開啟cmd檔案</p>
 <p>5.輸入如下</p>
-<p><img alt="" height="294" src="./../images/messageImage_1732971993998.jpg" width="562"/></p>
+<p><img alt="" height="359" src="./../images/image (2).jpg" width="602"/></p>
 <p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
 <p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
 <br />W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
