--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -42,16 +42,106 @@
 <p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w7.stl.html">零件檔</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
 <p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名XXX.stl</p>
 <p>4.存完後，開啟cmd檔案</p>
 <p>5.輸入如下</p>
-<p><img alt="" height="294" src="/images/messageImage_1732971993998.jpg" width="562"/></p>
+<p><img alt="" height="359" src="/images/image (2).jpg" width="602"/></p>
 <p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
 <p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
 <h3>w7.stl</h3>
 <p></p>
+<script src="/static/jsc3d.js" type="text/javascript"></script>
+<!-- 模型連結 -->
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --></div>
+<!-- 動態生成的模型部分 -->
+<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
+<script type="text/javascript">
+// 函數用來動態生成模型部件
+function createModelPart(index, url) {
+    var modelPartDiv = document.createElement('div');
+    modelPartDiv.style = "width: 48%;"; // 左右排列
+
+    modelPartDiv.innerHTML = `
+        <div id="models${index}">
+            <canvas height="300" id="cv${index}" style="border: 1px solid;" width="400"></canvas>
+        </div>
+
+        <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 20px;">
+            Model Color:<input id="mdlClr${index}" onchange="changeOption${index}('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40">
+            Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color" value="#000000">
+            Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color" value="#000000"><br>
+            Render Mode:<select id="render${index}" onchange="changeOption${index}('RenderMode',this.value)">
+                <option>Flat</option>
+                <option>Point</option>
+                <option>Wireframe</option>
+                <option>Smooth</option>
+            </select>
+            Definition:<select id="defini${index}" onchange="changeOption${index}('Definition',this.value)">
+                <option>Standard</option>
+                <option>low</option>
+                <option>high</option>
+            </select>
+        </div>
+    `;
+    document.getElementById('modelParts1').appendChild(modelPartDiv);
+
+    // 初始化觀察者和選項
+    window[`viewer${index}`] = null;
+
+    // 獲取選項的函數
+    window[`getOptions${index}`] = function() {
+        var mc = document.getElementById(`mdlClr${index}`).value;
+        var bc1 = document.getElementById(`bckClr${index}_1`).value;
+        var bc2 = document.getElementById(`bckClr${index}_2`).value;
+        var ren = document.getElementById(`render${index}`).value;
+        var def = document.getElementById(`defini${index}`).value;
+        return {ModelColor: mc, BackgroundColor1: bc1, BackgroundColor2: bc2, RenderMode: ren, Definition: def};
+    };
+
+    window[`readSTLfile${index}`] = function(opt, canvasId) {
+        var canvas = document.getElementById(canvasId);
+        window[`viewer${index}`] = new JSC3D.Viewer(canvas);
+        window[`viewer${index}`].setParameter('SceneUrl', opt.SceneUrl);
+        window[`viewer${index}`].setParameter('InitRotationX', 0);
+        window[`viewer${index}`].setParameter('InitRotationY', 0);
+        window[`viewer${index}`].setParameter('InitRotationZ', 0);
+        window[`viewer${index}`].setParameter('ModelColor', opt.ModelColor);
+        window[`viewer${index}`].setParameter('BackgroundColor1', opt.BackgroundColor1);
+        window[`viewer${index}`].setParameter('BackgroundColor2', opt.BackgroundColor2);
+        window[`viewer${index}`].setParameter('RenderMode', opt.RenderMode);
+        window[`viewer${index}`].setParameter('Definition', opt.Definition);
+        window[`viewer${index}`].init();
+        window[`viewer${index}`].update();
+    };
+
+    window[`changeOption${index}`] = function(strOpt, strValue) {
+        console.log(`PART ${index} change ` + strOpt + " to " + strValue);
+        window[`viewer${index}`].setParameter(strOpt, strValue);
+        window[`viewer${index}`].init();
+        window[`viewer${index}`].update();
+    };
+
+    window[`openByGet${index}`] = function() {
+        var opt = window[`getOptions${index}`]();
+        opt.SceneUrl = url;
+        window[`readSTLfile${index}`](opt, `cv${index}`);
+    };
+
+    window[`openByGet${index}`]();  // 加載模型
+}
+
+function initModelParts() {
+    var links = document.querySelectorAll('#modelLinks1 a');
+    links.forEach(function(link, index) {
+        createModelPart(index + 1, link.href); // 初始化模型
+    });
+}
+
+window.onload = initModelParts;  // 頁面加載時初始化所有模型
+</script>
 <h2>w9</h2>
 <p>1.自評期中成績</p>
 <p>2.分析NX的在職場上的發展與用處</p>
