新增W7作業與影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -43,6 +43,7 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BlixSNVUfwk?si=aqVsdQrgZY4Vylnz" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Y--Mha4_HX8?si=W5TGUt0FJPqQD2xX" title="YouTube video player" width="560"></iframe></p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名XXX.stl</p>
@@ -55,7 +56,7 @@
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Columnbase2.stl">模型4</a> <!-- 第四題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
