--- a/content/w7.html
+++ b/content/w7.html
@@ -146,6 +146,7 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BlixSNVUfwk?si=aqVsdQrgZY4Vylnz" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Y--Mha4_HX8?si=W5TGUt0FJPqQD2xX" title="YouTube video player" width="560"></iframe></p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名XXX.stl</p>
