--- a/content/w7.stl.html
+++ b/content/w7.stl.html
@@ -145,7 +145,7 @@ img.add_border {
 <p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_w7_Baseplate.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockA.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_BearingblockB.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_w7_Columnbase2.stl">模型4</a> <!-- 第四題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
