--- a/content/HW1_Exam.html
+++ b/content/HW1_Exam.html
@@ -142,8 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>HW1_Exam</h1>
-<p><br/><span>w</span><span>10</span></p>
-<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
+<p><br/><span></span></p>
 <br />w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
