--- a/content/w9.html
+++ b/content/w9.html
@@ -154,7 +154,7 @@ img.add_border {
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    1.Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> 2.</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功能。</p>
-<br/><span>w</span><span>10</span>
+<br/><br/><span>w</span><span>10</span>
 <p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
 <br />w7.stl << <a href='w7.stl.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
         
