--- a/content/w7.html
+++ b/content/w7.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7</h1>
+    <div id="tipue_search_content">w7作業上傳方法 << <a href='w7作業上傳方法.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7</h1>
 <p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w7.stl.html">零件檔</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
@@ -156,15 +156,8 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1yvibkeXpsg?si=qHw4141R5qf9k8of" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/-SFwJgw5cgM?si=sGn0hPoErr__qy6g" title="YouTube video player" width="560"></iframe></p>
 <p></p>
-<p>1.利用solvespaces畫圖完成後</p>
-<p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
-<p>3.存到公用下載中，並且改檔名XXX.stl</p>
-<p>4.存完後，開啟cmd檔案</p>
-<p>5.輸入如下</p>
-<p><img alt="" height="359" src="./../images/image (2).jpg" width="602"/></p>
-<p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
-<p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
-<br />W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
+<p></p>
+<br />w7作業上傳方法 << <a href='w7作業上傳方法.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
         
     <!-- footer -->
       <div class="container">
