--- a/content/w7作業上傳方法.html
+++ b/content/w7作業上傳方法.html
@@ -141,15 +141,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w11_hw.stl.html'>Next</a> >> w11_hw.stl<br /><h1>w11_hw</h1>
-<p>其他組員作業連結<a href="https://mdecad2024.github.io/hw-Spirit0224/content/w11_hw.html">41223122</a>  <a href="https://mdecad2024.github.io/hw-joeisme1208/content/w11_hw.html">41223130</a></p>
-<p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w11_hw.stl.html">零件檔</a>點這裡</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/pMLyWLySgyE?si=siUhbi8sFQ7Ggepf" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RbsG0DDPYsk?si=VMHXRZ5mRmBl2odv" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/mw0eESL8t6k?si=eLDTd4_N-G5KqKah" title="YouTube video player" width="560"></iframe></p>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='w11_hw.stl.html'>Next</a> >> w11_hw.stl</div>
+    <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w7作業上傳方法</h1>
+<p>1.利用solvespaces畫圖完成後</p>
+<p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
+<p>3.存到公用下載中，並且改檔名XXX.stl</p>
+<p>4.存完後，開啟cmd檔案</p>
+<p>5.輸入如下</p>
+<p><img alt="" height="359" src="./../images/image (2).jpg" width="602"/></p>
+<p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
+<p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
+<br />W3 << <a href='W3.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
